--- a/try_d3js/WebContent/d3-tuto01.html
+++ b/try_d3js/WebContent/d3-tuto01.html
@@ -10,21 +10,38 @@
     <svg id="target"></svg>
   </body>
   <script>
-    var target = d3.select( "#target" ).attr( "width", 500 ).attr( "height", 100 );
+    var width = 400;
+    var height = 300;
+    var target = d3.select( "#target" ).attr( "width", width + 100 ).attr( "height", height + 100 );
     var dataset = [ [5, 20], [480, 90], [250, 50], [100, 33], [330, 95],
     	             [410, 12], [475, 44], [25, 67], [85, 21], [220, 88] ];
+    var padding = 30;
+    var xScale = d3.scaleLinear().domain( [0, d3.max( dataset, d => d[0] ) ] ).range( [ padding, width - padding ] );
+    var yScale = d3.scaleLinear().domain( [0, d3.max( dataset, d => d[1] ) ] ).range( [ height - padding, padding ] );
+    var axisX = d3.axisBottom( xScale );
+    var axisY = d3.axisLeft( yScale );
 
     target.selectAll( "circle" ).data( dataset )
       .enter().append( "circle" )
-        .attr( "cx", d => d[0] )
-        .attr( "cy", d => d[1] )
+        .attr( "cx", d => xScale( d[0] ) )
+        .attr( "cy", d => yScale( d[1] ) )
+        .attr( "fill", "SkyBlue" )
         .attr( "r", 4 );
 
     target.selectAll( "text" ).data( dataset )
       .enter().append( "text" )
-        .attr( "x", d => d[0] )
-        .attr( "y", d => d[1] )
+        .attr( "x", d => xScale( d[0] ) )
+        .attr( "y", d => yScale( d[1] ) )
         .attr( "fill", "red" )
         .text( d => d[0] + "," + d[1] );
+
+    target.append( "g" )
+      .attr( "transform", "translate(" + 0 + "," + (height-padding) + ")" )
+      .call( axisX );
+
+    target.append( "g" )
+      .attr( "transform", "translate(" + padding + "," + 0 + ")" )
+      .call( axisY );
+
   </script>
 </html>
